# DCS

DCS/: .cproject  .project  BUILD_NOTES  CHANGELOG  Makefile  README  dcs.bat  run-DCS-app.sh  setup.py
DCS/DCS/: Controller.py  GUI_work_frame.py  Layer.py
DCS/src/: dcs.xbm  windows_setup.py
DCS/src/DCS/: Controller.py  Layer.py  Utils.py  utils.cpp
DCS/src/GUI/: Controller.py  display_frame.py  layer_list.py  main.py  menubar.py  progressbar.py  spin_label.py  thumbnail.py  work_frame.py
DCS/src/utils/: Base_Layer.py  CMakeLists.txt  Layer.py  Utils.py  utils.cpp  utils.hpp
DCS2_py/DCS2_py/: .pydevproject
DCS2_py/examples/: entry_widget.py  option_menu.py  progress_bar.py  scale.py  threaded.py
DCS2_py/src/: DCS_gui.py  DCS_gui_events.py  DCS_menu.py  DCS_spin_label.py  DCS_utils.py  thumbnail
DCS3/: .cproject  .project
DCS3/Debug/: DCS3  makefile  objects.mk
DCS3/doc/: .specification.json.swp  specification.json
DCS3/h/: DCS.hpp  DCS_types.hpp  Timer.h  Utils.hpp
DCS3/src/: Blob.cpp  Utils.cpp  Utils.hpp  main.cpp
DCS4/: Makefile  README
DCS4/DCS/: DCS_utils.py  GUI_display_frame.py  GUI_layer_list.py  GUI_main.py  GUI_menubar.py  GUI_spin_label.py  GUI_thumbnail.py  GUI_work_frame.py  Layer.py  Makefile  utils.cpp
DCS4/src/: DCS_utils.py  Makefile  utils.cpp  utils.hpp
DCS_C/: .cproject  DCS.test  Makefile  SconsBuilderConfig.py  main.cpp
experimental/: scrolled_image.py
gimp_plugins/: dcs_colorize_camo.py  dcs_generate_camo.py  dcs_generate_palette.py
legacy/: README
legacy/DCS2_py/: .project
legacy/DCS_C/: .project  .scb
(+50 files in other folders)
